--- a/static/styles/sass/pages/_login.scss
+++ b/static/styles/sass/pages/_login.scss
@@ -2,4 +2,17 @@ section.login {
   position: relative;
   margin: 0 auto;
   width: 460px;
+
+  .container {
+    position: relative;
+    margin: 120px auto 0;
+    padding: 30px 10% 50px;
+    border: 1px solid #eaeced;
+    overflow: hidden;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
