--- a/static/styles/sass/pages/_login.scss
+++ b/static/styles/sass/pages/_login.scss
@@ -14,5 +14,189 @@ section.login {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    img.logo {
+      margin: 0 auto 13.16%;
+    }
+
+    .form {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+
+      * {
+        width: 100%;
+      }
+
+      &-input {
+        position: relative;
+        z-index: 2;
+
+        &::before {
+          content: "";
+          display: block;
+          z-index: -1;
+          position: absolute;
+          top: 0;
+          width: 100%;
+          height: 40px;
+          background-color: #fff;
+          -webkit-border-radius: 5px;
+          -moz-border-radius: 5px;
+          -khtml-border-radius: 5px;
+          border-radius: 5px;
+        }
+
+        .form-field {
+          border: 0.0625rem solid #9da3a6;
+          border-radius: 4px;
+          margin-bottom: 16px;
+
+          input:not([type="submit"]):not([type="radio"]):not(
+              [type="checkbox"]
+            ) {
+            -webkit-background-clip: padding-box;
+            -moz-background-clip: padding-box;
+            background-clip: padding-box;
+            -webkit-transition: border 0.2s ease-in-out,
+              background-color 0.2s ease-in-out;
+            -moz-transition: border 0.2s ease-in-out,
+              background-color 0.2s ease-in-out;
+            -o-transition: border 0.2s ease-in-out,
+              background-color 0.2s ease-in-out;
+            transition: border 0.2s ease-in-out,
+              background-color 0.2s ease-in-out;
+          }
+
+          input {
+            border: 0;
+            font-size: 22px;
+            height: 64px;
+            width: 100%;
+            padding: 0 10px;
+            border: 0.0625rem solid #9da3a6;
+            background: #fff;
+            text-overflow: ellipsis;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            -khtml-border-radius: 4px;
+            border-radius: 4px;
+            -webkit-box-shadow: none;
+            -moz-box-shadow: none;
+            box-shadow: none;
+            font-size: 100%;
+            color: #000;
+            font-variant: normal;
+            font-weight: bold;
+            direction: ltr;
+          }
+
+          input:not(:placeholder-shown) {
+            padding-top: 20px;
+          }
+
+          input:focus {
+            outline: 0;
+            border: 0.0625rem solid #1040c1;
+            box-shadow: inset 0 0 0 0.125rem #1040c1,
+              0 0 0 0.375rem rgba(16, 114, 235, 0.16), inset 0 0 0 1px #031954,
+              0 0 0 1px #1040c1;
+            background-color: #fff;
+            padding-top: 20px;
+          }
+
+          input:placeholder-shown ~ .field-label {
+            display: none;
+          }
+
+          input:focus ~ .field-label {
+            display: block;
+          }
+
+          .field-label {
+            position: absolute;
+            color: #6c7378;
+            clip: rect(1px 1px 1px 1px);
+            clip: rect(1px, 1px, 1px, 1px);
+            padding: 0;
+            border: 0;
+            height: 1px;
+            width: 1px;
+            overflow: hidden;
+            transition: font-size 0.5s ease;
+          }
+
+          input[type="password"]:focus ~ .field-label,
+          input[type="password"]:not(:focus):valid ~ .field-label,
+          input[type="password"]:not(:placeholder-shown) ~ .field-label {
+            top: 8px;
+            bottom: 10px;
+            left: 10px;
+            font-size: 14px;
+            height: 30px;
+            width: 400px;
+            clip: unset;
+            opacity: 1;
+            font-weight: 500;
+            font-family: Monforat;
+          }
+
+          input:not([type="submit"]):not([type="radio"]):not(
+              [type="checkbox"]
+            ) {
+            -webkit-background-clip: padding-box;
+            -moz-background-clip: padding-box;
+            background-clip: padding-box;
+            -webkit-transition: border 0.2s ease-in-out,
+              background-color 0.2s ease-in-out;
+            -moz-transition: border 0.2s ease-in-out,
+              background-color 0.2s ease-in-out;
+            -o-transition: border 0.2s ease-in-out,
+              background-color 0.2s ease-in-out;
+            transition: border 0.2s ease-in-out,
+              background-color 0.2s ease-in-out;
+          }
+
+          [for="email"].field-label {
+            position: absolute;
+            pointer-events: none;
+            left: 10px;
+            top: 8px;
+            transition: 0.2s ease all;
+            height: 30px;
+            width: 400px;
+            clip: unset;
+            text-align: left;
+          }
+
+          [for="password"].field-label {
+            position: absolute;
+            pointer-events: none;
+            left: 10px;
+            top: 12px;
+            transition: 0.2s ease all;
+            height: 30px;
+            width: 400px;
+            clip: unset;
+            text-align: left;
+          }
+
+          input:focus::placeholder {
+            color: transparent;
+          }
+
+          input::placeholder {
+            font-weight: bold;
+            font-family: Monforat;
+          }
+        }
+      }
+    }
   }
 }
