Add login and sign up button

--- a/static/styles/sass/_variables.scss
+++ b/static/styles/sass/_variables.scss
@@ -1,2 +1,4 @@
 $font-family-primary: Monforat, Helvetica, Arial, sans-serif;
 $font-family-medium: Monforat-Medium, Helvetica, Arial, sans-serif;
+$primary: #142c8e;
+$box-shadow-primary: 0 0 0 0.375rem rgba(16, 114, 235, 0.16);
