--- a/static/styles/sass/_util.scss
+++ b/static/styles/sass/_util.scss
@@ -34,3 +34,137 @@ select {
 .hide {
   display: none !important;
 }
+
+a,
+a:link,
+a:visited {
+  color: #1072eb;
+  font-family: $font-family-medium;
+  font-variant: normal;
+  font-weight: 400;
+  text-decoration: none;
+  -webkit-transition: color 0.2s ease-out;
+  -moz-transition: color 0.2s ease-out;
+  -o-transition: color 0.2s ease-out;
+  transition: color 0.2s ease-out;
+}
+
+a:hover,
+a:focus {
+  text-decoration: underline;
+  outline: 0;
+}
+
+a.button,
+a.button:link,
+a.button:visited,
+.button {
+  width: 100%;
+  min-height: 44px;
+  padding: 12px 32px;
+  border: 0;
+  display: block;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  background-color: $primary;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  color: #fff;
+  font-size: 1.2em;
+  text-align: center;
+  font-weight: 700;
+  font-family: $font-family-medium;
+  text-shadow: none;
+  text-decoration: none;
+  transition: color 0.2s ease, background-color 0.2s ease,
+    border-color 0.2s ease, box-shadow 0.2s ease;
+  -webkit-font-smoothing: antialiased;
+}
+
+.button {
+  font-family: $font-family-primary;
+  font-weight: 400;
+  font-variant: normal;
+  font-size: 100%;
+  border-radius: 25px;
+  height: 48px;
+}
+
+a.button:hover,
+a.button:link:hover,
+a.button:visited:hover,
+.button:hover {
+  background-color: #1040c1;
+  border-color: #1040c1;
+  outline: 0;
+}
+
+a.button:focus,
+a.button:link:focus,
+a.button:visited:focus,
+.button:focus {
+  background-color: $primary;
+  border: 0.1875rem solid #1040c1;
+  outline: 0;
+  box-shadow: $box-shadow-primary;
+}
+
+a.button.active,
+a.button:link.active,
+a.button:visited.active,
+.button.active,
+a.button:active,
+a.button:link:active,
+a.button:visited:active,
+.button:active {
+  background: $primary;
+}
+
+a.button.secondary,
+a.button:link.secondary,
+a.button:visited.secondary,
+.button.secondary {
+  background-color: transparent;
+  color: $primary;
+  border: 0.0125rem solid $primary;
+  transition: color 0.2s ease, background-color 0.2s ease,
+    border-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+a.button.secondary:hover,
+a.button:link.secondary:hover,
+a.button:visited.secondary:hover,
+.button.secondary:hover {
+  background: 0 0;
+  border-color: $primary;
+  box-shadow: inset 0 0 0 0.0625rem $primary;
+  color: $primary;
+}
+
+a.button.secondary:focus,
+a.button:link.secondary:focus,
+a.button:visited.secondary:focus,
+.button.secondary:focus {
+  background: 0 0;
+  border-color: $primary;
+  box-shadow: inset 0 0 0 0.0625rem $primary;
+  color: $primary;
+  outline: 0;
+  border: 0.125rem solid #1072eb;
+  box-shadow: 0 0 0 0.25rem rgba(16, 114, 235, 0.16);
+}
