--- a/static/styles/sass/pages/_login.scss
+++ b/static/styles/sass/pages/_login.scss
@@ -103,9 +103,8 @@ section.login {
           input:focus {
             outline: 0;
             border: 0.0625rem solid #1040c1;
-            box-shadow: inset 0 0 0 0.125rem #1040c1,
-              0 0 0 0.375rem rgba(16, 114, 235, 0.16), inset 0 0 0 1px #031954,
-              0 0 0 1px #1040c1;
+            box-shadow: inset 0 0 0 0.125rem #1040c1, $box-shadow-primary,
+              inset 0 0 0 1px #031954, 0 0 0 1px #1040c1;
             background-color: #fff;
             padding-top: 20px;
           }
@@ -210,6 +209,14 @@ section.login {
             }
           }
         }
+      }
+
+      a.forgot-password {
+        position: relative;
+        display: inline-block;
+        margin: 0 0 16px;
+        font-size: 18px;
+        text-align: left;
       }
     }
   }
