--- a/static/styles/sass/pages/_login.scss
+++ b/static/styles/sass/pages/_login.scss
@@ -237,6 +237,20 @@ section.login {
           font-size: 15px;
         }
       }
+
+      #otp::before {
+        background-image: url("/static/images/sms_icon.png");
+        background-repeat: no-repeat;
+        background-size: 14px;
+        width: 14px;
+        height: 18px;
+        display: inline-block;
+        content: " ";
+        position: relative;
+        top: 3px;
+        left: 5px;
+        margin-right: 10px;
+      }
     }
   }
 }
